# ApplyForge-BE

./: .env.example  API_CONTRACT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0003_saas_features.py  0004_userprofile_phone_age.py  0005_nullable_chunk_embedding.py  0006_priority_scores.py  0007_linkedin_connections.py  0008_drop_reachability_score.py  ea40452e4ce3_add_jd_link_to_job_applications.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py
app/db/: session.py
app/models/: enums.py  models.py
app/schemas/: admin.py  application.py  auth.py  profile.py  suggestions.py
app/services/ai/: exceptions.py  factory.py  providers.py
app/services/applications/: service.py
app/services/auth/: google_oauth.py  service.py
app/services/chat/: service.py
app/services/export/: resume_exporter.py
app/services/linkedin/: service.py
app/services/parsing/: service.py
app/services/rag/: service.py
app/services/scoring/: service.py
app/services/storage/: __init__.py  service.py
app/services/suggestions/: service.py
app/services/usage/: __init__.py  service.py
applyforge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: .env.example  pyproject.toml
backend/alembic/: script.py.mako
backend/app/: main.py
backend/app/core/: config.py  logging.py  (+1 more)
backend/tests/: conftest.py  test_auth.py  test_profile_and_applications.py
scripts/: reset_admin_password.py  seed_john_doe.py
tests/: conftest.py  test_ai_providers.py
(+23 files in other folders)
