[project]
name = "applyforge-backend"
version = "0.1.0"
description = "AI-powered Job Application Assistant backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "pymysql>=1.1.1",
  "email-validator>=2.2.0",
  "python-docx>=1.1.2",
  "pypdf>=4.2.0",
  "structlog>=24.4.0",
  "openai>=1.14.0",
  "boto3>=1.35.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
